# FNT2

./: CMakeLists.txt  CMakeSettings.json  LICENSE  Makefile  README.md  calibrator.cpp  fntsort.cpp
FNT2/: CMakeLists.txt
FNT2/include/: Channel.h  FNT.h  Gate.h  Helper.h  analysis.h
FNT2/src/: Channel.cpp  FNT.cpp  Gate.cpp  Helper.cpp  analysis.cpp  fntsort.cpp
include/: Channel.h  FNT.h  Gate.h  Helper.h  analyser.h  analysis.h  channels.h  gates.h
inputs/: calibration.txt  channels.txt  files.txt  gates.txt  histos.txt
inputs/examples read_only/: channels.txt  files.txt  gates.txt  histos.txt
src/: Channel.cpp  FNT.cpp  Gate.cpp  Helper.cpp  analyser.cpp  analysis.cpp  channels.cpp  gates.cpp
